Add some raw data to the final project

--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -123,6 +123,284 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imports\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>McDonald's Quarterly Gross Profit(Millions of US $)</th>\n",
+       "      <th>McDonald's Quarterly Gross Profit(Millions of US $).1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Q1 2019</td>\n",
+       "      <td>$2,536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Q4 2018</td>\n",
+       "      <td>$2,697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Q3 2018</td>\n",
+       "      <td>$2,822</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Q2 2018</td>\n",
+       "      <td>$2,740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Q1 2018</td>\n",
+       "      <td>$2,528</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  McDonald's Quarterly Gross Profit(Millions of US $)  \\\n",
+       "0                                            Q1 2019    \n",
+       "1                                            Q4 2018    \n",
+       "2                                            Q3 2018    \n",
+       "3                                            Q2 2018    \n",
+       "4                                            Q1 2018    \n",
+       "\n",
+       "  McDonald's Quarterly Gross Profit(Millions of US $).1  \n",
+       "0                                             $2,536     \n",
+       "1                                             $2,697     \n",
+       "2                                             $2,822     \n",
+       "3                                             $2,740     \n",
+       "4                                             $2,528     "
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# read the table from mcdonald's profit website\n",
+    "df_list_mc = pd.read_html(\"https://www.macrotrends.net/stocks/charts/MCD/mcdonalds/gross-profit\")\n",
+    "\n",
+    "# McDonald's annual profit from 2005 to 2018\n",
+    "mc_annual_profit = df_list_mc[0]\n",
+    "\n",
+    "# McDonald's quarterly profit from 2005 Q1 to 2019 Q1\n",
+    "mc_quarter_profit = df_list_mc[1]\n",
+    "\n",
+    "mc_quarter_profit.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Change</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>May 2014</td>\n",
+       "      <td>4.28</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jun 2014</td>\n",
+       "      <td>4.41</td>\n",
+       "      <td>3.04 %</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jul 2014</td>\n",
+       "      <td>5.02</td>\n",
+       "      <td>13.83 %</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Aug 2014</td>\n",
+       "      <td>5.72</td>\n",
+       "      <td>13.94 %</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sep 2014</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>4.90 %</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Month  Price   Change\n",
+       "0  May 2014   4.28        -\n",
+       "1  Jun 2014   4.41   3.04 %\n",
+       "2  Jul 2014   5.02  13.83 %\n",
+       "3  Aug 2014   5.72  13.94 %\n",
+       "4  Sep 2014   6.00   4.90 %"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# read the list from beef price\n",
+    "df_list_beef = pd.read_html(\"https://www.indexmundi.com/commodities/?commodity=beef&months=60\")\n",
+    "\n",
+    "# table of beef price from May 2014 to April 2019\n",
+    "monthly_beef_price = df_list[1]\n",
+    "\n",
+    "monthly_beef_price.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>Producer Price Index</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1990-12-01</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1991-01-01</td>\n",
+       "      <td>100.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1991-02-01</td>\n",
+       "      <td>100.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1991-03-01</td>\n",
+       "      <td>100.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1991-04-01</td>\n",
+       "      <td>100.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        DATE  Producer Price Index\n",
+       "0 1990-12-01                 100.0\n",
+       "1 1991-01-01                 100.8\n",
+       "2 1991-02-01                 100.9\n",
+       "3 1991-03-01                 100.7\n",
+       "4 1991-04-01                 100.6"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# read the monthly potato price from 1990-12-01 to 2019-03-01\n",
+    "monthly_potato_price = pd.read_excel(\"Producer Price Index for Potato.xls\")\n",
+    "\n",
+    "# rename the producer price index\n",
+    "monthly_potato_price = monthly_potato_price.rename(index=str, columns={\"WPU024502\": \"Producer Price Index\"})\n",
+    "\n",
+    "monthly_potato_price.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -223,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
