--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -73,7 +73,8 @@
     "*Fill in your background and prior work here* \n",
     "\n",
     "References (include links):\n",
-    "- 1)\n",
+    "- 1) Forbes: Key Trends Impacting Burger King's Business\n",
+    "https://www.forbes.com/sites/greatspeculations/2014/07/01/key-trends-impacting-burger-kings-business/#14ec06933cd0\n",
     "- 2)"
    ]
   },
@@ -112,6 +113,20 @@
     "1-2 sentences describing each dataset. \n",
     "\n",
     "If you plan to use multiple datasets, add 1-2 sentences about how you plan to combine these datasets."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Number of fast food restaurants*\n",
+    "https://www.statista.com/statistics/196619/total-number-of-fast-food-restaurants-in-the-us-since-2002/\n",
+    "*McDonald's gross profit*\n",
+    "https://www.macrotrends.net/stocks/charts/MCD/mcdonalds/gross-profit\n",
+    "*Beef prices*\n",
+    "https://www.indexmundi.com/commodities/?commodity=beef&months=60\n",
+    "*Producer price index for potatos*\n",
+    "https://fred.stlouisfed.org/series/WPU024502"
    ]
   },
   {
@@ -397,6 +412,210 @@
     "monthly_potato_price = monthly_potato_price.rename(index=str, columns={\"WPU024502\": \"Producer Price Index\"})\n",
     "\n",
     "monthly_potato_price.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Unnamed: 1</th>\n",
+       "      <th>Unnamed: 2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Number of establishments in the U.S. fast food...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Number of establishments in the United States ...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Number of establishments</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>201667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>207396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>211023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>217992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>217938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>217622</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>220492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>225122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>228723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>232611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>236333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>240115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>241379</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>243698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>247191</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Unnamed: 0                                         Unnamed: 1  \\\n",
+       "0          NaN                                                NaN   \n",
+       "1          NaN  Number of establishments in the U.S. fast food...   \n",
+       "2          NaN  Number of establishments in the United States ...   \n",
+       "3          NaN                                                NaN   \n",
+       "4          NaN                                               2004   \n",
+       "5          NaN                                               2005   \n",
+       "6          NaN                                               2006   \n",
+       "7          NaN                                               2007   \n",
+       "8          NaN                                               2008   \n",
+       "9          NaN                                               2009   \n",
+       "10         NaN                                               2010   \n",
+       "11         NaN                                               2011   \n",
+       "12         NaN                                               2012   \n",
+       "13         NaN                                               2013   \n",
+       "14         NaN                                               2014   \n",
+       "15         NaN                                               2015   \n",
+       "16         NaN                                               2016   \n",
+       "17         NaN                                               2017   \n",
+       "18         NaN                                               2018   \n",
+       "\n",
+       "                  Unnamed: 2  \n",
+       "0                        NaN  \n",
+       "1                        NaN  \n",
+       "2                        NaN  \n",
+       "3   Number of establishments  \n",
+       "4                     201667  \n",
+       "5                     207396  \n",
+       "6                     211023  \n",
+       "7                     217992  \n",
+       "8                     217938  \n",
+       "9                     217622  \n",
+       "10                    220492  \n",
+       "11                    225122  \n",
+       "12                    228723  \n",
+       "13                    232611  \n",
+       "14                    236333  \n",
+       "15                    240115  \n",
+       "16                    241379  \n",
+       "17                    243698  \n",
+       "18                    247191  "
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "establishments = pd.read_excel(\"Number of establishments in the United States fast food industry.xlsx\")\n",
+    "establishments"
    ]
   },
   {
