--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -138,12 +138,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -2964,11 +2965,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "## YOUR CODE HERE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "lxml not found, please install it",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-55-a645fe80d1cb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdf_stock\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"McDonald's Stock.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_html\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"https://www.macrotrends.net/stocks/charts/MCD/mcdonalds/gross-profit\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/srv/conda/lib/python3.6/site-packages/pandas/io/html.py\u001b[0m in \u001b[0;36mread_html\u001b[0;34m(io, match, flavor, header, index_col, skiprows, attrs, parse_dates, tupleize_cols, thousands, encoding, decimal, converters, na_values, keep_default_na, displayed_only)\u001b[0m\n\u001b[1;32m   1092\u001b[0m                   \u001b[0mdecimal\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdecimal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconverters\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconverters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mna_values\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mna_values\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1093\u001b[0m                   \u001b[0mkeep_default_na\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkeep_default_na\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1094\u001b[0;31m                   displayed_only=displayed_only)\n\u001b[0m",
+      "\u001b[0;32m/srv/conda/lib/python3.6/site-packages/pandas/io/html.py\u001b[0m in \u001b[0;36m_parse\u001b[0;34m(flavor, io, match, attrs, encoding, displayed_only, **kwargs)\u001b[0m\n\u001b[1;32m    892\u001b[0m     \u001b[0mretained\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    893\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mflav\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mflavor\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 894\u001b[0;31m         \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_parser_dispatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mflav\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    895\u001b[0m         \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mio\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompiled_match\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattrs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdisplayed_only\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    896\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/srv/conda/lib/python3.6/site-packages/pandas/io/html.py\u001b[0m in \u001b[0;36m_parser_dispatch\u001b[0;34m(flavor)\u001b[0m\n\u001b[1;32m    849\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    850\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0m_HAS_LXML\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 851\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mImportError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"lxml not found, please install it\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    852\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0m_valid_parsers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mflavor\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    853\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: lxml not found, please install it"
+     ]
+    }
+   ],
+   "source": [
+    "df_stock = pd.read_csv(\"McDonald's Stock.csv\")\n",
+    "df_list = pd.read_html(\"https://www.macrotrends.net/stocks/charts/MCD/mcdonalds/gross-profit\")\n",
+    "print(df_list)"
    ]
   },
   {
@@ -3011,12 +3038,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              Volume         Value   Avg_Close\n",
+      "Quarter                                       \n",
+      "1.0      323153300.0  3.111951e+10   96.081406\n",
+      "2.0      329881000.0  3.155420e+10   95.619672\n",
+      "3.0      288422900.0  2.906975e+10  100.952857\n",
+      "4.0      366295834.0  3.483240e+10   95.377656\n",
+      "5.0      397954140.0  3.703380e+10   93.611406\n",
+      "6.0      458754908.0  4.362340e+10   94.875246\n",
+      "7.0      378236499.0  3.663023e+10   96.723492\n",
+      "8.0      385302713.0  3.740620e+10   97.412031\n",
+      "9.0      415703980.0  4.628183e+10  111.813125\n",
+      "10.0     464766528.0  5.542930e+10  119.499344\n",
+      "11.0     351132438.0  4.384916e+10  125.238750\n",
+      "12.0     302014968.0  3.580805e+10  118.498438\n",
+      "13.0     268572538.0  3.139744e+10  117.255397\n",
+      "14.0     230990555.0  2.899204e+10  125.478871\n",
+      "15.0     223300193.0  3.219598e+10  144.526190\n",
+      "16.0     217949390.0  3.412958e+10  156.731270\n",
+      "17.0     183970294.0  3.088426e+10  167.864032\n"
+     ]
+    }
+   ],
    "source": [
     "## YOUR CODE HERE\n",
-    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION"
+    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION\n",
+    "\n",
+    "#clean stock\n",
+    "df_stock_c = pd.DataFrame(df_stock[['Date', 'Close', 'Volume']])\n",
+    "df_stock_c['Value'] = df_stock_c.Close * df_stock_c.Volume\n",
+    "#print(df_stock_c)\n",
+    "\n",
+    "df_stock_c['Quarter'] = np.nan\n",
+    "df_stock_c['Count'] = 1\n",
+    "for i in range(len(df_stock_c['Date'])):\n",
+    "    dates = df_stock_c['Date'][i].split('-')\n",
+    "    qt = (int(dates[0])-2013)*4 + int((int(dates[1])-1)/3) - 2\n",
+    "    df_stock_c.iloc[i, df_stock_c.columns.get_loc('Quarter')] = qt\n",
+    "    \n",
+    "df_stock_c.drop(df_stock_c[df_stock_c['Quarter'] < 1].index, inplace = True)\n",
+    "df_stk = pd.DataFrame(df_stock_c.groupby('Quarter').sum())\n",
+    "df_stk['Avg_Close'] = df_stk.Close / df_stk.Count\n",
+    "df_stk = pd.DataFrame(df_stk[['Volume', 'Value', 'Avg_Close']])\n",
+    "print(df_stk)\n",
+    "\n",
+    "#stock cleaned, quarter 1 = 2013 Q4"
    ]
   },
   {
@@ -3071,7 +3144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
