linear regression updated

--- a/Mcdonalds_Gross_Data.ipynb
+++ b/Mcdonalds_Gross_Data.ipynb
@@ -2,7 +2,160 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>McDonald's Annual Gross Profit(Millions of US $)</th>\n",
+       "      <th>McDonald's Annual Gross Profit(Millions of US $).1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>$10,786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>$10,621</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>$10,205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>$9,789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>$10,456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>$10,903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>$10,816</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>$10,687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>$9,637</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>$8,792</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>$8,639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>$7,905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2006</td>\n",
+       "      <td>$6,932</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2005</td>\n",
+       "      <td>$6,177</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    McDonald's Annual Gross Profit(Millions of US $)  \\\n",
+       "0                                               2018   \n",
+       "1                                               2017   \n",
+       "2                                               2016   \n",
+       "3                                               2015   \n",
+       "4                                               2014   \n",
+       "5                                               2013   \n",
+       "6                                               2012   \n",
+       "7                                               2011   \n",
+       "8                                               2010   \n",
+       "9                                               2009   \n",
+       "10                                              2008   \n",
+       "11                                              2007   \n",
+       "12                                              2006   \n",
+       "13                                              2005   \n",
+       "\n",
+       "   McDonald's Annual Gross Profit(Millions of US $).1  \n",
+       "0                                             $10,786  \n",
+       "1                                             $10,621  \n",
+       "2                                             $10,205  \n",
+       "3                                              $9,789  \n",
+       "4                                             $10,456  \n",
+       "5                                             $10,903  \n",
+       "6                                             $10,816  \n",
+       "7                                             $10,687  \n",
+       "8                                              $9,637  \n",
+       "9                                              $8,792  \n",
+       "10                                             $8,639  \n",
+       "11                                             $7,905  \n",
+       "12                                             $6,932  \n",
+       "13                                             $6,177  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df_list = pd.read_html(\"https://www.macrotrends.net/stocks/charts/MCD/mcdonalds/gross-profit\")\n",
+    "df_yearly = df_list[0]\n",
+    "df_quarterly = df_list[1]\n",
+    "\n",
+    "df_yearly\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -440,17 +593,13 @@
        "56                                             $1,437     "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "df_list = pd.read_html(\"https://www.macrotrends.net/stocks/charts/MCD/mcdonalds/gross-profit\")\n",
-    "df1 = df_list[0]\n",
-    "df2 = df_list[1]\n",
-    "df2"
+    "df_quarterly"
    ]
   },
   {
