Modify final final project

--- a/FInalFinalProject.ipynb
+++ b/FInalFinalProject.ipynb
@@ -2695,6 +2695,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion & Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ethics & Privacy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data used for our observation and analysis was all found from online sources, most of them were open source while a couple we had to pay for ourselves. \n",
+    "The data was publicly posted and or legally acquired via payment allowing us to analyze the dataset without putting us at risk of violating legal or privacy issues. \n",
+    "The data sets may reflect biased characteristics because of our lack of knowledge about the background of the change reflects in our data. We lack the strength of analyzing the causation of the change and relating it to a broader social context.\n",
+    "The data used mainly focused on roughly the past 8 years which may limit our vision of analyzing the wholistic trend of McDonald’s business growth.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Limitations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our data shows pretty decent correlation between beef price, potato price, and stock volume versus McDonald’s revenue. The data found was each of adequate sizes and contained information important to hypothesis. Although the data individually is significant, as a whole, the data did not overlap as well as expected. Most of the data was acquired in monthly intervals which resulted in pretty large data sets, but because the comparison is intended to be between revenue, which is grouped quartley it shrunk our data set by three. \n",
+    "\n",
+    "Most of the websites we gathered data from were from credible sources. Some of the best data found was not able to be used because it was displayed as pdf and we were unable to convert it into a workable data set. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Further directions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " It is shown in our supply model that the potato price is highly correlated with McDonald’s revenue. However, McDonald’s process potatoes mainly by fried that its potato products are cheap but really unhealthy. In the previous work, we know that McDonald’s has a strong promotion strategy and dollar menu is one of its successful business promotion strategy. However, McDonald’s dollar menu mainly consist of oily burgers combining with big amount of fried potatoes. It is reasonable to argue that the dollar menu is able to bring profit to McDonald’s largely due to the low price of potatoes. \n",
+    "    In our second part of analysis, we can also see that McDonald’s is highly occupied in populated region. Based on our knowledge from previous work, we know that McDonald’s is able to expand successfully based on shared ownership with local business owners that the ensured profit allow them willingly open new shops in the expected region. However, it is also discussed that the local owners have to listen to the headquarter of McDonald’s for the decision of design, products, promotion strategy, etc. \n",
+    "   Combining our two parts of research, we see that McDonald’s is a highly aggressive expanding business, yet its profitting strategy is not that based on the consideration of public health. In the future research and suggestions, we would like to see a more targeted regulation or limitation of McDonald’s products promotion. \n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
